feat: add forgotPassword e resetPassword for User (AuthRouter)
