# src/controllers/AuthControllers/resetPasswordUserController.js
@@ -1,0 +1,44 @@
+const User = require("../../models/User");
+const bcrypt = require("bcryptjs");
+const { Op } = require("sequelize");
+
+const ResetPasswordController = async (req, res) => {
+  try {
+    const { token } = req.params;
+    const { newPassword } = req.body;
+
+    const user = await User.findOne({
+        where: {
+          resetPasswordToken: token,
+          resetPasswordExpires: { [Op.gt]: Date.now() }, // Token não expirado
+        },
+      });
+
+    if (!user) {
+      return res.status(400).json({
+        success: false,
+        message: "Token inválido ou expirado",
+      });
+    }
+
+    // Atualiza a senha do usuário
+    const hashedPassword = await bcrypt.hash(newPassword, 12);
+    user.password = hashedPassword;
+    user.resetPasswordToken = null;
+    user.resetPasswordExpires = null;
+    await user.save();
+
+    return res.status(200).json({
+      success: true,
+      message: "Senha redefinida com sucesso!",
+    });
+  } catch (error) {
+    console.error(error);
+    return res.status(500).json({
+      success: false,
+      message: "Erro interno no servidor",
+    });
+  }
+};
+
+module.exports = ResetPasswordController;
