# src/routers/routerAuth.js
@@ -1,9 +1,18 @@
 const { Router } = require("express");
+
+const ForgotPasswordController = require("../controllers/AuthControllers/forgotPasswordUserController")
+const ResetPasswordController = require("../controllers/AuthControllers/resetPasswordUserController");
 const RegisterUserController = require("../controllers/AuthControllers/registerUserController");
 const UserCreateValidator = require("../middlewares/Validators/UserValidators/UserCreateValidator");
 const LoginUserController = require("../controllers/AuthControllers/loginUserController");
 const LoginValidator = require("../middlewares/Validators/AuthValidators/LoginValidator");
 const router = Router();
+
+// Esqueci minha senha (envia o e-mail)
+router.post("/forgot-password", ForgotPasswordController);
+
+// Redefinir a senha
+router.post("/reset-password/:token", ResetPasswordController);
 
 // User Register
 router.post("/register", UserCreateValidator, RegisterUserController);
