# swagger.json
@@ -2,7 +2,9 @@
   "openapi": "3.1.1",
   "info": {
     "title": "backend-LIBRA",
-    "version": "1.0.0"
+    "version": "1.0.1",
+    "description": "A versão 1.0.1 inclui: \n- FIX: Criação das rotas principais para registro e login de usuários.\n- FIX: Implementação de CRUD para gerenciamento de deficiências e tipos de deficiência.\n- FIX: Associação entre usuários e deficiências.\n- FIX: Uso de autenticação via Bearer token com JWT.\n- ADD: Adição das rotas para 'esqueceu senha' e 'alterar senha'.\n  - Rota 'esqueceu senha' permite a solicitação de redefinição de senha via email.\n  - Rota 'alterar senha' permite ao usuário atualizar sua senha mediante a autenticação com Bearer token."
+
   },
   "servers": [
     {
@@ -80,6 +82,76 @@
         }
       }
     },
+    "/auth/forgot-password": {
+    "post": {
+      "summary": "Solicitar redefinição de senha",
+      "description": "Essa rota envia um e-mail com um link para redefinir a senha.",
+      "tags": ["Auth"],
+      "requestBody": {
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string"
+                }
+              },
+              "required": ["email"]
+            }
+          }
+        }
+      },
+      "responses": {
+        "200": {
+          "description": "E-mail de redefinição enviado com sucesso."
+        },
+        "404": {
+          "description": "Usuário não encontrado."
+        }
+      }
+    }
+  },
+  "/auth/reset-password/{token}": {
+    "post": {
+      "summary": "Redefinir senha",
+      "description": "Essa rota redefine a senha do usuário usando um token.",
+      "tags": ["Auth"],
+      "parameters": [
+        {
+          "name": "token",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "string"
+          }
+        }
+      ],
+      "requestBody": {
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "newPassword": {
+                  "type": "string"
+                }
+              },
+              "required": ["newPassword"]
+            }
+          }
+        }
+      },
+      "responses": {
+        "200": {
+          "description": "Senha redefinida com sucesso."
+        },
+        "400": {
+          "description": "Token inválido ou expirado."
+        }
+      }
+    }
+  },
     "/disableds": {
       "post": {
         "summary": "Criar uma deficiência no banco de dados",
@@ -623,6 +695,12 @@
             "type": "int"
           },
           "techAss": {
+            "type": "string"
+          },
+          "resetPasswordToken": {
+            "type": "string"
+          },
+          "resetPasswordExpires": {
             "type": "string"
           }
         }
